--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
       
     <h2 class="flexbox-item">About David J. Hall</h2>
-    <span class=""> I'm originally from East Atlanta Georgia. I started my coding journey 4 years ago as I tried to learn basic JavaScript meathods CSS and HTML on Udemmy. I would work 10-12 hr days at my previous job, get off work and come home and study full-stack developement for hours. I am no stranger to hard work and dedication. </span>
+    <span class=""> I'm originally from East Atlanta Georgia. I started my coding journey 4 years ago as I tried to learn basic JavaScript methods CSS and HTML on Udemmy. I would work 10-12 hr days at my previous job, get off work and come home and study full-stack developement for hours. I am no stranger to hard work and dedication. </span>
 
 
 
