added more information

--- a/index.html
+++ b/index.html
@@ -29,12 +29,21 @@
 
     <div class="flexbox-container">
 
-    <div class="flexbox-item flexbox-item-1">Work</div>
+    <div class="flexbox-item flexbox-item-1">
+      <h2>Work</h2>
+    <p></p>
+    </div>
 
-    <div class="flexbox-item flexbox-item-2">I can be reached here..</div>
+    <div class="flexbox-item flexbox-item-2">
+      <h2>I can be reached here..</h2>
+      <ul>
+        <li>dillonsdad91@gmail.com</li>
+      <li>davjhall@github.com</li>
+      <li>Cell: 861-3447 </li>
+      </ul>
     
-
-    <div class="flexbox-item flexbox-item-3">Another title</div>
+    </div>
+    
 
     </div>
 </body>
